<resources>
    <string name="app_name">FabflixMobile</string>
    <string name="action_settings">Settings</string>

    <color name="red">#CC0000</color>
    <color name="blue">#0080FF</color>
    <color name="green">#80FF00</color>

    <string name="title_activity_blue"> The Blue Page </string>
    <string name="title_activity_green"> The Green Page </string>
    <string name="search">Search</string>
    <string name="movie_title">movie-title</string>
    <string name="director">Director</string>
    <string name="year">Year</string>
    <string name="star">Star</string>
    <string name="title_activity_single_movie">singleMovie</string>
</resources>
